# cookiecutter_pep_517

./: cookiecutter.json
hooks/: pre_gen_project.py
local_extensions/: __init__.py  trover_classifier_extension.py
{{cookiecutter.project_name}}/: pyproject.toml
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.repo_name}}/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  _traceback.py  pyproject.toml
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.repo_name}}/tests/: default_test.py
